MERC-586 Fix modal vertical centering on small devices

--- a/assets/scss/components/foundation/modal/_modal.scss
+++ b/assets/scss/components/foundation/modal/_modal.scss
@@ -5,7 +5,6 @@
 
 .modal {
     // scss-lint:disable ImportantRule
-    left: 0;
     margin: 0 auto;
     max-height: 90%;
     max-width: 95%;
@@ -15,6 +14,8 @@
     padding: 0;
     right: 0;
     top: 50% !important;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal--large {
